Create detection LLM endpoint (#232)
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>